--- a/mysolutions.css
+++ b/mysolutions.css
@@ -1,9 +1,14 @@
 .ex-1-square:hover{
-    transition: background-color 2s;
+    transition: all 2s;
     background-color: red;
 }
 
 .ex-2-square:active{
-    transition: width 2s;
+    transition: all 2s;
     width: 100%;
+}
+
+.ex-3-square:hover{
+    border-radius: 50%;
+    transition: all 0.5s;
 }
