--- a/mysolutions.css
+++ b/mysolutions.css
@@ -17,3 +17,15 @@
     opacity: 0;
     transition: all 1s;
 }
+
+.ex-5-square{
+    transition: all 1s;
+}
+
+.ex-5-square:hover{
+    transform: scale(2);
+}
+
+.ex-5-square:active{
+    transform: scale(0.5);
+}
