--- a/mysolutions.css
+++ b/mysolutions.css
@@ -1,21 +1,29 @@
-.ex-1-square:hover{
+.ex-1-square{
     transition: all 2s;
+}
+
+.ex-1-square:hover{
     background-color: red;
 }
 
+.ex-2-square{
+    transition: width 2s, border-radius 0.5s;
+}
+
 .ex-2-square:active{
-    transition: all 2s;
     width: 100%;
 }
 
 .ex-3-square:hover{
     border-radius: 50%;
-    transition: all 0.5s;
+}
+
+.ex-4-square{
+    transition: all 1s;
 }
 
 .ex-4-square:hover{
     opacity: 0;
-    transition: all 1s;
 }
 
 .ex-5-square{
@@ -34,7 +42,19 @@
     filter: grayscale(100%);
 }
 
+.ex-7-img{
+    transition: all 1s;
+}
+
 .ex-7-img:hover{
     filter: grayscale(100%);
+}
+
+.ex-8-img{
     transition: all 1s;
+}
+
+.ex-8-img:hover{
+    border-radius: 4%;
+    filter: sepia(0.6);
 }
