--- a/mysolutions.css
+++ b/mysolutions.css
@@ -55,6 +55,16 @@
 }
 
 .ex-8-img:hover{
-    border-radius: 4%;
+    border-radius: 5%;
     filter: sepia(0.6);
+}
+
+.ex-9-img{
+    transition: all 1s;
+}
+
+.ex-9-img:hover{
+    border-radius: 5%;
+    filter: sepia(0.6);
+    transform: scale(1.5);
 }
