--- a/mysolutions.css
+++ b/mysolutions.css
@@ -82,3 +82,21 @@
         transform: rotate(360deg);
     }
 }
+
+.ex-11-icon:hover{
+    animation: rotazione-2 2s linear;
+}
+
+@keyframes rotazione-2 {
+    0%{
+        transform: rotate(0deg);
+    }
+
+    90%{
+        transform: rotate(320deg);
+    }
+
+    100%{
+        transform: rotate(0deg);
+    }
+}
