--- a/mysolutions.css
+++ b/mysolutions.css
@@ -136,3 +136,75 @@
         right: 20%;
     }
 }
+
+.ex-13-button:hover .ex-13-top-white{
+    animation: anim-3 3.5s infinite linear;
+}
+
+@keyframes anim-3 {
+    0%{
+        top: -10px;
+        left: -20px;
+    }
+
+    20%{
+        top: -10px;
+        left: 150px;
+    }
+
+    40%{
+        top: 60px;
+        left: 150px;
+    }
+
+     60%{
+        top: 60px;
+        left: -20px;
+    }
+
+    80%{
+        top: -10px;
+        left: -20px;
+    }
+
+    100%{
+        top: -10px;
+        left: -20px;
+    }
+}
+
+.ex-13-button:hover .ex-13-bottom-white{
+    animation: anim-4 3.5s infinite linear;
+}
+
+@keyframes anim-4 {
+    0%{
+        bottom: -10px;
+        right: -20px;
+    }
+
+    20%{
+        bottom: -10px;
+        right: 150px;
+    }
+
+    40%{
+        bottom: 60px;
+        right: 150px;
+    }
+
+     60%{
+        bottom: 60px;
+        right: -20px;
+    }
+
+    80%{
+        bottom: -10px;
+        right: -20px;
+    }
+
+    100%{
+        bottom: -10px;
+        right: -20px;
+    }
+}
