--- a/mysolutions.css
+++ b/mysolutions.css
@@ -1,3 +1,4 @@
+/*ex 1*/
 .ex-1-square{
     transition: all 2s;
 }
@@ -5,7 +6,9 @@
 .ex-1-square:hover{
     background-color: red;
 }
+/*fine ex 1*/
 
+/*ex 2*/
 .ex-2-square{
     transition: width 2s, border-radius 0.5s;
 }
@@ -13,11 +16,15 @@
 .ex-2-square:active{
     width: 100%;
 }
+/*fine ex 2*/
 
+/*ex 3*/
 .ex-3-square:hover{
     border-radius: 50%;
 }
+/*fine ex 3*/
 
+/*ex 4*/
 .ex-4-square{
     transition: all 1s;
 }
@@ -25,7 +32,9 @@
 .ex-4-square:hover{
     opacity: 0;
 }
+/*fine ex 4*/
 
+/*ex 5*/
 .ex-5-square{
     transition: all 1s;
 }
@@ -37,11 +46,15 @@
 .ex-5-square:active{
     transform: scale(0.5);
 }
+/*fine ex 5*/
 
+/*ex 6*/
 .ex-6-img:hover{
     filter: grayscale(100%);
 }
+/*fine ex 6*/
 
+/*ex 7*/
 .ex-7-img{
     transition: all 1s;
 }
@@ -49,26 +62,32 @@
 .ex-7-img:hover{
     filter: grayscale(100%);
 }
+/*fine ex 7*/
 
+/*ex 8*/
 .ex-8-img{
     transition: all 1s;
 }
 
 .ex-8-img:hover{
-    border-radius: 5%;
+    border-radius: 15px;
     filter: sepia(0.6);
 }
+/*fine ex 8*/
 
+/*ex 9*/
 .ex-9-img{
     transition: all 1s;
 }
 
 .ex-9-img:hover{
-    border-radius: 5%;
+    border-radius: 15px;
     filter: sepia(0.6);
     transform: scale(1.5);
 }
+/*fine ex 9*/
 
+/*ex 10*/
 .ex-10-icon{
     animation: rotazione 1s linear infinite;
 }
@@ -82,7 +101,9 @@
         transform: rotate(360deg);
     }
 }
+/* fine ex 10*/
 
+/*ex 11*/
 .ex-11-icon:hover{
     animation: rotazione-2 2s linear;
 }
@@ -100,7 +121,9 @@
         transform: rotate(0deg);
     }
 }
+/*fine ex 11*/
 
+/*ex 12*/
 .ex-12-button:hover .ex-12-top-white{
     animation: anim-1 2s linear;
 }
@@ -136,9 +159,11 @@
         right: 20%;
     }
 }
+/*fine ex 12*/
 
+/*ex 13*/
 .ex-13-button:hover .ex-13-top-white{
-    animation: anim-3 3.5s infinite linear;
+    animation: anim-3 3.5s infinite;
 }
 
 @keyframes anim-3 {
@@ -174,7 +199,7 @@
 }
 
 .ex-13-button:hover .ex-13-bottom-white{
-    animation: anim-4 3.5s infinite linear;
+    animation: anim-4 3.5s infinite;
 }
 
 @keyframes anim-4 {
@@ -208,3 +233,4 @@
         right: -20px;
     }
 }
+/*fine ex 13*/
